--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 1</a>
 
             <a href="https://www.roblox.com/games/2339984663/Sinking-Ships">Top 2</a>
+            <button onclick="likeMassage()" >like</button>
+            <button onclick="unlikeMassage()" >un like</button>
             <img width="300" height="300" src="obrazek.png" />
         </body>
     </html>
