--- a/index.html
+++ b/index.html
@@ -8,12 +8,46 @@
         </head>
         <body>
             <p id="mega"></p>
+            <li>
+                <li>
+                    <a href="https://aresan2137.github.io/main/">main</a>
+                </li>
+                <li>
+                    <a href="https://aresan2137.github.io/discower/">discower</a>
+                </li>
+            </li>
+            <li>
             <b>top 10 gier na boblox</b>
+            </li>
             <li>
                 <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 1</a>
             </li>
             <li>
-                <a href="https://www.roblox.com/games/2339984663/Sinking-Ships">Top 2</a>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 2</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 3</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 4</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 5</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 6</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 7</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 8</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 9</a>
+            </li>
+            <li>
+                <a href="https://www.roblox.com/games/738339342/SNOWY-STRONGHOLD-Flood-Escape-2#ropro-quick-play">Top 10</a>
             </li>
             <li>
             <button onclick="likeMassage()" >like</button>
